--- a/HTML & CSS/CSS/transformrotate.css
+++ b/HTML & CSS/CSS/transformrotate.css
@@ -6,9 +6,34 @@ div {
     height: 50px;
     text-align: center;
     background-color: greenyellow;
-    border: 2px solid black;
+    /* border: 2px solid black; */
     margin: 10px;
 }
 div:nth-of-type(2n) {
-    
+    background-color: #f7f7f7;
+}
+div:nth-of-type(3n) {
+    background-color: aqua;
+}
+#one {
+    transform: rotate(45deg);
+    box-shadow: 2px 2px 10px yellow;
+    background-image: url(..//CSS/IMG_0802.jpeg);
+    background-size: contain;
+}
+#two {
+    transform: scale(0.5);
+    background-image: url(..//CSS/IMG_0802.jpeg);
+    background-size: cover;
+}
+#three {
+    transform: translateX(100px);
+    background-image: url(..//CSS/IMG_0802.jpeg);
+    background-size: auto;
+}
+#four {
+    transform: skew(30deg);
+}
+#five {
+    transform: rotate(45deg) translate(150px);
 }
