--- a/HTML & CSS/CSS/position.css
+++ b/HTML & CSS/CSS/position.css
@@ -25,3 +25,9 @@ div {
     top: 100px;
     left: 100px;
 }
+#fixed {
+    background-color: yellow;
+    position: fixed;
+    top: 100px;
+    left: 100px;
+}
