--- a/HTML & CSS/CSS/grid.css
+++ b/HTML & CSS/CSS/grid.css
@@ -3,8 +3,10 @@
     width: 600px;
     background-color: black;
     display: grid;
-    grid-template-rows: 50px 50px 50px 50px 50px;
-    grid-template-columns: 200px 200px 200px;
+    /* grid-template-rows: 50px 50px 50px 50px 50px;
+    grid-template-columns: 200px 200px 200px; */
+    grid-template-rows: repeat(5, 1fr);
+    grid-template-columns: repeat(5, 1fr);
 }
 
 .item {
