--- a/HTML & CSS/CSS/youtube.css
+++ b/HTML & CSS/CSS/youtube.css
@@ -23,3 +23,35 @@
   /* display: block; */
 }
 
+.searchbar {
+  width: 500px;
+  border: 1px solid black;
+  border-radius: 40px;
+  display: flex;
+  align-items: center;
+  padding: 0 15px;
+  margin: 0 auto;
+  background-color: white;
+}
+
+.searchbar input {
+  border: none;
+  outline: none;
+  width: 100%;
+  font-size: 18px;
+}
+
+.search-btn {
+  height: 100%;
+  width: 55px;
+  display: flex;
+  /* align-items: center; */
+  justify-content: center;
+  border-left: 1px solid #aaa;
+  cursor: pointer;
+}
+
+.search-btn i {
+  font-size: 16px;
+  color: black;
+}
