Final Project Spotiify Finish

--- a/HTML & CSS/CSS/spotifyclone.css
+++ b/HTML & CSS/CSS/spotifyclone.css
@@ -216,14 +216,6 @@ a {
     padding: 8px 12px;
 }
 
-.album {
-    width: 25%;
-    display: flex;
-    align-items: center;
-    gap: 12px;
-    /* background-color: pink; */
-}
-
 .player {
     width: 50%;
     display: flex;
@@ -295,9 +287,11 @@ a {
 }
 
 .album {
+    width: 25%;
     display: flex;
     align-items: center;
     gap: 12px;
+    /* background-color: pink; */
 }
 
 .album-img {
@@ -331,4 +325,54 @@ a {
     display: flex;
     gap: 12px;
     margin-left: 16px;
+}
+
+.controls {
+    display: flex;
+    align-items: center;
+    margin-right: -6%;
+    gap: 10px;
+    background: black;
+    padding: 8px 16px;
+    color: #b3b3b3;
+    font-size: 15px;
+}
+
+.controls i {
+    cursor: pointer;
+}
+
+.play-btn {
+    font-size: 28px;
+}
+
+.controls i:hover {
+    color: #fff;
+}
+
+.volume {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.voulme-bar {
+    width: 140px;
+    -webkit-appearance: none;
+    appearance: none;
+    height: 4px;
+    background: #4d4d4d;
+    border-radius: 2px;
+    outline: none;
+}
+
+.volume-bar::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    background: #fff;
+    cursor: pointer;
+    margin-top: -1px;
 }
