--- a/Projects/Files/Instagram.css
+++ b/Projects/Files/Instagram.css
@@ -5,4 +5,47 @@
 
 body {
     background-color: black;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.left-sidebar {
+    /* background-color: goldenrod; */
+    width: 210px;
+    height: 836px;
+    padding: 8px 12px 20px 12px;
+    border-right: 1px solid rgb(56, 56, 56)
+}
+
+.logo {
+    font-family: 'Billabong', cursive;
+    font-size: 25px;
+    font-weight: bolder;
+    padding: 25px 12px 16px 12px;
+    color: white;
+    height: 32px;
+    width: 196px;
+}
+
+.nav-list {
+    display: flex;
+    flex-direction: column;
+    gap: 35px;
+    list-style: none;
+    padding: 12px;
+}
+
+.nav-item {
+    margin: 4px 0;
+    text-decoration: none;
+    color: white;
+}
+
+.nav-item i {
+    font-size: 20px;
+}
+
+.nav-item span {
+  margin-left: 16px;
+  font-size: 16px;
+  font-weight: bolder;
 }
