Update part10.css and part10.html with new styles and structure; add event listeners in part10.js for paragraph and box interactions

--- a/JavaScript/CSS/part10.css
+++ b/JavaScript/CSS/part10.css
@@ -1,9 +1,16 @@
 body {
     text-align: center;
 }
-div {
+/* div {
     height: 200px;
     width: 100vh;
     border: 1px solid black;
     margin: auto;
+} */
+
+.ll {
+    height: 100px;
+    width: 100px;
+    border: 1px solid black;
+    background-color: pink;
 }
