--- a/JavaScript/CSS/part10.css
+++ b/JavaScript/CSS/part10.css
@@ -15,7 +15,7 @@
     background-color: pink;
 } */
 
-div {
+/* div {
     height: 300px;
     width: 500px;
     background-color: pink;
@@ -26,4 +26,19 @@ li {
 }
 ul {
     background-color: blue;
+} */
+
+ul li {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    transition: opacity 0.4s ease;
+}
+
+ul li.fade-out {
+    opacity: 0;
+}
+
+.delete {
+    cursor: pointer;
 }
