--- a/Practice/part1.css
+++ b/Practice/part1.css
@@ -31,8 +31,17 @@ body {
     background: white;
     color: #1877f2;
     border-radius: 50%;
-    padding-left: 0.2px;
 }
+.logo-border {
+    background-color: #4c4c4c;
+    height: 27px;
+    width: 27px;
+    border-radius: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .srch-border {
     background-color: #333334;
     height: 27px;
@@ -50,7 +59,8 @@ body {
 .middle-icons {
     display: flex;
     margin: 0 auto;
-    gap: 35px;
+    padding-left: 50px;
+    gap: 65px;
 }
 .fa-mid {
     color: white;
