--- a/Practice/index1.css
+++ b/Practice/index1.css
@@ -61,7 +61,7 @@ button:disabled {
   color: white;
 } */ 
 
-.main {
+/* .main {
   margin: 0;
   height: 100vh;
   display: flex;
@@ -69,10 +69,10 @@ button:disabled {
   align-items: center;
   flex-direction: row;
   /* align-items: center; */
-}
+/* } */
 
-.result {
+/* .result {
   height: 100px;
   width: 100px;
   border: 2px solid black;
-}
+} */
