--- a/Backend/EJSDIR/views/instagram.ejs
+++ b/Backend/EJSDIR/views/instagram.ejs
@@ -6,8 +6,21 @@
     <title>Instagram</title>
 </head>
 <body>
-    <h2>This page belongs to <%= username %></h2>
+    <h2>This page belongs to <%= data.name %></h2>
     <button>Follow</button>
     <button>Message</button>
+
+    <p>
+        Followers: <%= data.followers %> &nbsp; &nbsp; Following: <%= data.following %>
+    </p>
+    <hr>
+
+    <% for (let post of data.posts) { %>
+        <img src="<%= post.image %>" alt="some img">
+        <p>
+            Likes: <%= post.likes %>
+            comments: <%= post.comments %>
+        </p>
+    <% } %>
 </body>
 </html>
