--- a/Practice/CSS/Facebook.css
+++ b/Practice/CSS/Facebook.css
@@ -12,9 +12,10 @@
     align-items: center;
 
     display: grid;
-    grid-template-columns: auto minmax(0, 1fr) auto; /* left | middle | right */
+    grid-template-columns: 1fr auto 1fr; /* left | middle | right */
     align-items: center;
     column-gap: 12px;
+    position: relative;
 }
 
 /* Left Section */
@@ -28,6 +29,8 @@
     gap: 5px;   /* Original gap = 8px but my gap = 5px*/
     flex: 0 1 auto;
     min-width: 0;
+    
+    justify-self: start;
 }
 .fb-icon {
     font-size: 40px;
@@ -43,6 +46,7 @@
     height: 39px;
     padding: 0 12px;
     background-color: #3a3b3c;
+    /* background-color: #0766ff; */
     border-radius: 999px;
     flex: 0 1 auto;
     min-width: 0;
@@ -86,8 +90,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: clamp(14px, 6vw, 110px);
+    /* gap: clamp(50px, 5vw, 110px); */
+    gap: 110px;
+    transition: gap 0.3s ease;
     min-width: 0;
+    /* transform: translate(-50, -50); */
 }
 .nav-center-icon {
     font-size: 24px;
@@ -102,16 +109,18 @@
     align-items: center;
     justify-content: center;
     gap: 8px;
+    
+    justify-self: end;
 }
 
 .nav-right-icon {
-    font-size: 25px;
+    font-size: 22px;
     color: #b0b3b8;
 }
 
 .icon-background {
-    height: 47px;
-    width: 47px;
+    height: 40px;
+    width: 40px;
     background-color: #3b3d3e;
     border-radius: 50%;
     display: flex;
@@ -119,20 +128,16 @@
     align-items: center;
 }
 
-@media (max-width: 760px) {
-    .navbar-mid .nav-center-icon:nth-child(5),
-    .navbar-mid .nav-center-icon:nth-child(4){
-    display: none;
-  }
+@media (max-width: 700px) {
+    .navbar{
+        grid-template-columns: auto 1fr auto;
+    }
+    .navbar-mid {
+        display: none;
+    }
 }
 
-@media (max-width: 640px){
-  .navbar-mid .nav-center-icon:nth-child(3){
-    display: none;
-  }
-}
-
-@media (max-width: 1259px){
+@media (max-width: 1260px){
   .nav-search-wrap{
     width: 39px;
     padding: 0;
@@ -145,4 +150,10 @@
     opacity: 0;
     pointer-events: none;
   }
+}
+
+@media (max-width: 1100px) {
+    .navbar-mid {
+        gap: clamp(8px, 5vw, 60px);
+    }
 }
