--- a/Practice/CSS/Facebook.css
+++ b/Practice/CSS/Facebook.css
@@ -3,16 +3,14 @@
     box-sizing: border-box;
 }
 .navbar {
-    height: 56px;   /* Original height = 56px Normally it's 40px*/
+    height: 56px;
     width: 100%;
     background-color: #242728;
-    /* display: flex; */
-    /* justify-content: space-between; */
     padding: 0 12px;
     align-items: center;
 
     display: grid;
-    grid-template-columns: 1fr auto 1fr; /* left | middle | right */
+    grid-template-columns: 1fr auto 1fr;
     align-items: center;
     column-gap: 12px;
     position: relative;
@@ -22,11 +20,10 @@
 
 .navbar-left {
     height: 100%;
-    /* background-color: darkgreen; */
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 5px;   /* Original gap = 8px but my gap = 5px*/
+    gap: 5px;
     flex: 0 1 auto;
     min-width: 0;
     
@@ -37,7 +34,7 @@
     background-color: white;
     border-radius: 100px;
     color: #0766ff;
-    min-width: 0; /* is a Flexbox/Grid fix that allows an element to shrink smaller than its content. */
+    min-width: 0;
 }
 .nav-search-wrap {
     display: flex;
@@ -46,7 +43,6 @@
     height: 39px;
     padding: 0 12px;
     background-color: #3a3b3c;
-    /* background-color: #0766ff; */
     border-radius: 999px;
     flex: 0 1 auto;
     min-width: 0;
@@ -72,29 +68,13 @@
 /* Middle Section */
 
 .navbar-mid {
-    /* display: flex; */
-    /* background-color: yellow; */
-    /* margin-left: auto; */
-    /* margin-right: 340px; */
-    /* gap: 110px; */
-
-    /* display: flex;
-    align-items: center;
-    justify-content: center;
-
-    flex: 1 1 auto;
-    min-width: 0;
-    gap: clamp(14px, 6vw, 110px); */
-
     justify-self: center;
     display: flex;
     align-items: center;
     justify-content: center;
-    /* gap: clamp(50px, 5vw, 110px); */
     gap: 110px;
     transition: gap 0.3s ease;
     min-width: 0;
-    /* transform: translate(-50, -50); */
 }
 .nav-center-icon {
     font-size: 24px;
@@ -104,7 +84,6 @@
 /* Right End */
 
 .navbar-right {
-    /* background-color: #0766ff; */
     display: flex;
     align-items: center;
     justify-content: center;
