--- a/Backend/Rest/views/show.ejs
+++ b/Backend/Rest/views/show.ejs
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <h1>Working!</h1>
+    <h1>Here is your post in detail</h1>
+    <p>Post id: <%= post.id %></p>
+    <div class="div">
+        <h3 class="user">@<%= post.username %></h3>
+        <h4> <%= post.content %> </h4>
+    </div>
 </body>
 </html>
