--- a/Mongodb/Express/views/edit.ejs
+++ b/Mongodb/Express/views/edit.ejs
@@ -8,7 +8,7 @@
 <body>
     <h3>Edit Your Chat: <%= chat._id %></h3>
     <p>This chat was sent From: <%= chat.from %> To: <%= chat.to %></p>
-    <form method="POST" action="/chats/<%= chat._id %>?_method=PUT">
+    <form method="POST" action="/chats/<%= chat._id %>/?_method=PUT">
         <textarea name="msg" rows="5" cols="50"><%= chat.msg %></textarea>
         <br>
         <button>Save</button>
