--- a/Projects/views/listings/new.ejs
+++ b/Projects/views/listings/new.ejs
@@ -7,7 +7,21 @@
 </head>
 <body>
     <form method="POST" action="/listings">
-        <h1>Works!!</h1>
+        <input name="title" placeholder="Enter title" type="text">
+        <br><br>
+        <textarea name="description" placeholder="Enter Description" type="text"></textarea>
+        <br><br>
+        <input name="image" placeholder="Enter Image URL/Link" type="text">
+        <br><br>
+        <input name="price" placeholder="Price" type="number">
+        <br><br>
+        <input name="country" placeholder="Enter country" type="text">
+        <br><br>
+        <input name="location" placeholder="Enter location" type="text">
+        <br><br>
+        <button>submit</button>
     </form>
 </body>
 </html>
+
+4
