--- a/Projects/views/listings/new.ejs
+++ b/Projects/views/listings/new.ejs
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h3>Create a new listing</h3>
     <form method="POST" action="/listings">
         <input name="title" placeholder="Enter title" type="text">
         <br><br>
