--- a/Projects/views/listings/index.ejs
+++ b/Projects/views/listings/index.ejs
@@ -4,9 +4,19 @@
     <!-- <form method="GET" action="/listings/new">
     <button>Add a new listing</button>
     </form> -->
-    <ul>
+
+    <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
         <% for(let listing of allListings) {%>
-        <li><a href="/listings/<%= listing._id %>"><%= listing.title %> </a></li>
-        <% } %>
-    </ul>
+        <a href="/listings/<%= listing._id %>">
+    <div class="card col">
+        <img src="<%= listing.image %>" class="card-img-top" alt="listing_image" style="height: 20rem">
+            <div class="card-body">
+                <!-- <h5 class="card-title">Card title</h5> -->
+                <p class="card-text"><b><%= listing.title %></b> <br> £<%= listing.price.toLocaleString("en-IN") %> / night</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+    </div>
+    </a>
+    <% } %>
+    </div>
 </body>
