--- a/Projects/views/public/css/style.css
+++ b/Projects/views/public/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: lightpink;
+    font-family: "Plus Jakarta Sans", sans-serif !important;
 }
 
 .navbar {
@@ -12,4 +12,56 @@ body {
 }
 .nav-link {
     color: #222222 !important;
+}
+
+/* Footer */
+.f-info-links a {
+    text-decoration: none;
+    color: #222222;
+}
+
+.f-info-links a:hover  {
+    text-decoration: underline;
+}
+
+.f-info-socials i {
+     font-size: 1.2rem;
+     margin-right: 1rem;
+}
+
+.f-info {
+    text-align: center;
+    height: 8rem;
+    background-color: #ebebeb;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: space-evenly;
+}
+
+.f-info-socials, 
+.f-info-links,
+.f-info-brand {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/* Card */
+
+.card {
+    border: none !important;
+    margin-bottom: 2rem;
+}
+.card-img-top {
+    border-radius: 1rem !important;
+    width: 100% !important;
+    object-fit: cover !important;
+}
+.card-body {
+    padding: 0 !important;
+}
+.card-text p {
+    font-weight: 400 !important;
 }
