Enhance listings display: add card overlay and update link styles; replace nested anchor with button

--- a/Projects/views/public/css/style.css
+++ b/Projects/views/public/css/style.css
@@ -65,3 +65,13 @@ body {
 .card-text p {
     font-weight: 400 !important;
 }
+.listing-link{
+    text-decoration: none;
+}
+.card-img-overlay {
+    opacity: 0;
+}
+.card-img-overlay:hover {
+    opacity: 0.2;
+    background-color: white;
+}
