--- a/Projects/views/listings/index.ejs
+++ b/Projects/views/listings/index.ejs
@@ -9,13 +9,10 @@
         <% for(let listing of allListings) {%>
         <a href="/listings/<%= listing._id %>" class="listing-link">
     <div class="card col">
-        <img src="<%= listing.image %>" class="card-img-top" alt="listing_image" style="height: 20rem">
-        <div class="card-img-overlay"></div>
+        <img src="<%= listing.image %>" class="card-img-top" alt="listing_image" style="height: 20rem"/>
+        <div class="card-img-overlay">bm</div>
             <div class="card-body">
-                <!-- <h5 class="card-title">Card title</h5> -->
                 <p class="card-text"><b><%= listing.title %></b> <br> £<%= listing.price.toLocaleString("en-IN") %> / night</p>
-                <!-- Avoid nested anchors: use a button or change structure so anchors are not nested -->
-                <button class="btn btn-primary">Go somewhere</button>
             </div>
     </div>
     </a>
