Enhance listing forms and details with improved styling and layout adjustments

--- a/Projects/views/listings/index.ejs
+++ b/Projects/views/listings/index.ejs
@@ -1,6 +1,8 @@
 <% layout("/layouts/boilerplate") %>
 <body>
-    <h1>All Listings</h1>
+    <br>
+    <h1 class="ballet-font">Your Listings</h1>
+    <br>
     <!-- <form method="GET" action="/listings/new">
     <button>Add a new listing</button>
     </form> -->
