--- a/Projects/views/listings/new.ejs
+++ b/Projects/views/listings/new.ejs
@@ -1,21 +1,39 @@
 <% layout("/layouts/boilerplate") %>
 <body>
-    <h3>Create a new listing</h3>
-    <form method="POST" action="/listings">
-        <label for="title" class="form-label"></label>
-        <input name="listing[title]" placeholder="Enter title" type="text" class="form-input">
+    <div class="row">
+        <div class="col-8 offset-2">
         <br><br>
-        <textarea name="listing[description]" placeholder="Enter Description" type="text"></textarea>
-        <br><br>
-        <input name="listing[image]" placeholder="Enter Image URL/Link" type="text">
-        <br><br>
-        <input name="listing[price]" placeholder="Price" type="number">
-        <br><br>
-        <input name="listing[country]" placeholder="Enter country" type="text">
-        <br><br>
-        <input name="listing[location]" placeholder="Enter location" type="text">
-        <br><br>
-        <button>submit</button>
-    </form>
+        <h3>Create a new listing</h3>
+        <form method="POST" action="/listings">
+            <div class="mb-3">
+                <label for="title" class="form-label">Title</label>
+                <input name="listing[title]" type="text" class="form-control">
+            </div>
+            <div class="mb-3">
+                <label for="title" class="form-label">Description</label>
+                <textarea name="listing[description]" type="text" class="form-control"></textarea>
+            </div>
+            <div class="mb-3">
+                <label for="title" class="form-label">Image Link</label>
+                <input name="listing[image]" type="text" class="form-control">
+            </div>
+            <div class="row">
+            <div class="mb-3 col-md-4">
+                <label for="title" class="form-label">Price</label>
+                <input name="listing[price]" type="number" class="form-control">
+            </div>
+            <div class="mb-3 col-md-8">
+                <label for="title" class="form-label">Country</label>
+                <input name="listing[country]" type="text" class="form-control">
+            </div>
+            </div>
+            <div class="mb-3">
+                <label for="title" class="form-label">Location</label>
+                <input name="listing[location]" placeholder="Enter location" type="text" class="form-control">
+            </div>
+            <button class="btn btn-dark add-btn">Add</button>
+            <br><br>
+        </form>
+        </div>
+    </div>
 </body>
-8
