--- a/Projects/views/listings/show.ejs
+++ b/Projects/views/listings/show.ejs
@@ -1,17 +1,22 @@
 <% layout("/layouts/boilerplate") %>
-<body>
+<div class="row mt-3">
+    <div class="col-8 offset-2">
     <h3>Listing Details</h3>
-    <ul>
-        <li><%= listing.title %></li>
-        <li><%= listing.description %></li>
-        <li>£ <%= listing.price.toLocaleString("en-IN") %></li>
-        <li><%= listing.location %></li>
-        <li><%= listing.country %></li>
-    </ul>
-    <br>
-    <a href="/listings/<%= listing._id %>/edit">Edit this listing</a>
+    <div class="card">
+        <img src="<%= listing.image %>" class="card-img-top show-img" alt="listing_image">
+        <div class="card-body">
+            <p class="card-text"><b><%= listing.title %></b> <br>
+            <%= listing.description %> <br>
+            £ <%= listing.price.toLocaleString("en-IN") %> <br>
+            <%= listing.location %> <br>
+            <%= listing.country %> <br>
+            </p>
+        </div>
+    </div>
+    <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark">Edit this listing</a>
     <br><br>
     <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
-        <button>Delete this listing</button>
+        <button class="btn btn-dark">Delete this listing</button>
     </form>
-</body>
+    </div>
+</div>
